fixing jumpy nav

--- a/themes/bbb-theme/assets/scss/layout/_common.scss
+++ b/themes/bbb-theme/assets/scss/layout/_common.scss
@@ -33,3 +33,9 @@ a[href^=skype]{
 figure {
   margin: auto;
 }
+
+section {
+  &.section-fixed-on {
+    padding-top: 3.25em;
+  }
+}
